fixed homepage overflow

--- a/src/Assets/Styles/Main/SearchBar/searchBar.css
+++ b/src/Assets/Styles/Main/SearchBar/searchBar.css
@@ -1,6 +1,6 @@
 .searchBar {
     height: 60px;
-    width: calc(100% - 255px);
+    width: calc(100% - 239px);
     position: fixed;
     background: #ffffff;
     z-index: 35;
